# wandb-mcp-server

./: .env  .env.example  .gitignore  AUTH_README.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING.md  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  README.md  README.raw_weave_api.md  README_HUGGINGFACE.md  RELEASING.md  SECURITY.md  app.py  auth.example.env  deploy.sh  env.example  gemini-extension.json  index.html  pyproject.toml  pytest.ini  requirements.txt
.badges/: mcp.json  sdk.json
.github/workflows/: ci.yml  deploy.yml  eval.yml
docs/: ARCHITECTURE.md  AUTH_README.md  OBSERVABILITY.md  PR_DESCRIPTION.md  README.md  analytics-contract.md  ci-eval-pipeline.md  segment-integration-spec.md  skill-analytics.md  skill-authoring-for-mcp.md  skills-architecture.md  wbaf-mcp-integration.md
release/v0.3.0/: DEPLOYMENT_STRATEGY.md
scripts/: test_local_changes.sh  test_oauth_local.py  validate_tools_live.py
skills/: skills.md
skills/_evals/: README.md  conftest.py  run.sh  run_evals.py  scorers.py  seed_project.py  test_experiment.py  test_failure.py  test_quickstart.py  test_trace.py  tui.py
skills/_evals/runners/: __init__.py  base.py  claude_runner.py  (+1 more)
skills/coding-agent-self-eval/: SKILL.md
skills/experiment-analysis/: SKILL.md
skills/failure-analysis/: SKILL.md
skills/quickstart/: SKILL.md
skills/trace-analyst/: SKILL.md
skills/wandb-evals/: SKILL.md
skills/wandb-projects/: SKILL.md
skills/wandb-reports/: SKILL.md
skills/wandb-runs/: SKILL.md
skills/wandb-traces/: SKILL.md
src/mcp_server/: __init__.py  add_to_client.py  server.py  utils.py
src/wandb_mcp_server/: __init__.py  add_to_client.py  analytics.py  analytics_datadog.py  analytics_segment.py  api_client.py  auth.py  config.py  oauth.py  oauth_exchange.py  query_models.py  report.py  secrets_resolver.py  server.py  session_manager.py  tool_prompts.py  trace_utils.py  utils.py
tests/: README.md  anthropic_test_utils.py  check_server.py  conftest.py  load_test.py  test_analytics.py  test_analytics_datadog.py  test_analytics_e2e.py  test_analytics_segment.py  test_authentication.py  test_compare_runs.py  test_config.py  test_content_search.py  test_count_traces.py  test_create_report_panels.py  test_detail_level.py  test_diagnose_run.py  test_docs_search.py  test_env_loading.py  test_gql_prefix.py  test_health_endpoint.py  test_infer_schema.py  test_latency_optimization.py  test_list_entities.py  test_log_analysis.py  test_log_format.py  test_markdown_parsing.py  test_oauth.py  test_oom_protection.py  test_probe_project.py  test_query_artifacts.py  test_query_registry.py  test_query_wandb_gql.py  test_query_wandbot.py  test_query_weave_traces.py  test_redaction.py  test_report_improvements.py  test_resolve_trace_roots.py  test_run_history.py  test_sandbox_execution.py  (+15 more)
(+51 files in other folders)
