[project]
name = "mcp_server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "weave>=0.51.36",
    "simple-parsing>=0.1.7",
    "pytest>=8.3.1",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.9.0",
    "wandb>=0.19.8",
    "wandb-workspaces>=0.1.12",
    "networkx>=3.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp_server = "mcp_server:cli"
add_to_client = "mcp_server:add_to_client_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
